# self-healing-rag

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
rag_env/: __init__.py  client.py  models.py  tasks.py
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
